--- a/src/Components/Todo/style.css
+++ b/src/Components/Todo/style.css
@@ -1,7 +1,12 @@
 .todo-container {
-    width: 10em;
-    height: 5em;
-    border: solid;
-    margin: 20px;
-    padding: 10px;
+    -webkit-box-align: center;
+    align-items: center;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    box-shadow: 0 3px 11px rgba(0,0,0,0.1);
+    padding: 8px 20px;
+    margin: 10px;
+    min-height: 100px;
 }
