--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-body {
+body,html {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,8 +7,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #f0efe9;
-  height: 90vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 code {
