--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ body,html {
   height: 100%;
 }
 
+#tsparticles {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
