--- a/src/Layout/TodoList/style.css
+++ b/src/Layout/TodoList/style.css
@@ -6,6 +6,7 @@
   position: relative;
   width: 400px;
   height: 85%;
+  z-index: 5;
 }
 
 .btn {
@@ -37,6 +38,7 @@
 .todolist-list{
   overflow: auto;
   max-height: 75%;
+  scroll-behavior: smooth;
 }
 
 .todolist-list::-webkit-scrollbar {
@@ -48,60 +50,11 @@
   border-radius: 10px;
 }
 
+.todo-btns {
+  display: flex;
+}
+
 .btn:focus {
   outline: none;
 }
 
-
-.icon-search-container {
-    display: inline-block;
-    border: 2px solid #d9d9d9;
-    border-radius: 50px;
-    height: 50px;
-    width: 50px;
-    position: relative;
-    transition: width 0.2s ease-out;
-    backface-visibility: hidden;
-  }
-  .icon-search-container.active {
-    width: 285px;
-  }
-  .icon-search-container.active .fa-times-circle {
-    opacity: 1;
-  }
-  .icon-search-container.active .search-input {
-    width: 200px;
-  }
-  .icon-search-container .fa-search {
-    color: #2980b9;
-    font-size: 30px;
-    position: absolute;
-    top: 7px;
-    left: 8px;
-    cursor: pointer;
-  }
-  .icon-search-container .fa-times-circle {
-    opacity: 0;
-    color: #d9d9d9;
-    font-size: 20px;
-    position: absolute;
-    top: 12px;
-    right: 8px;
-    transition: opacity 0.2s ease-out;
-    cursor: pointer;
-  }
-  .icon-search-container .search-input {
-    position: absolute;
-    cursor: default;
-    left: 45px;
-    top: 6px;
-    width: 0;
-    padding: 5px;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    line-height: 20px;
-    background-color: rgba(255, 255, 255, 0);
-    transition: width 0.2s ease-out;
-  }
-  
