--- a/src/Components/Date/style.css
+++ b/src/Components/Date/style.css
@@ -5,6 +5,6 @@
     -webkit-box-pack: justify;
     justify-content: space-between;
     letter-spacing: 2px;
-    padding: 0 0 35px 0;
+    padding: 30px 50px;
     text-transform: uppercase;
 }
