--- a/src/Components/NewFormTodo/style.css
+++ b/src/Components/NewFormTodo/style.css
@@ -6,7 +6,8 @@
     border-radius: 4px;
     font-size: 16px;
     background-color: white;
-    margin: 40px 0px;
+    margin: 0px;
+    padding: 5px 50px;
 }
 
 .form-root input {
