--- a/src/Components/Todo/style.css
+++ b/src/Components/Todo/style.css
@@ -2,13 +2,15 @@
     -webkit-box-align: center;
     align-items: center;
     display: -webkit-box;
+    text-align: initial;
     display: flex;
     -webkit-box-pack: justify;
     justify-content: space-between;
     box-shadow: 0 3px 11px rgba(0,0,0,0.1);
     padding: 10px;
-    margin: 10px;
+    margin: 10px 0px;
     min-height: 80px;
+    background: white;
 }
 
 .todo-item_inner {
