--- a/src/Layout/TodoList/style.css
+++ b/src/Layout/TodoList/style.css
@@ -2,10 +2,10 @@
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 3px 15px rgba(0,0,0,0.1);
-  padding: 80px;
   position: relative;
-  width: 400px;
-  height: 85%;
+  min-width: 450px;
+  height: 100%;
+  padding-top: 20px;
   z-index: 5;
 }
 
@@ -37,17 +37,14 @@
 
 .todolist-list{
   overflow: auto;
-  max-height: 75%;
+  max-height: 72%;
   scroll-behavior: smooth;
+  padding: 15px 50px;
+  background: white;
 }
 
 .todolist-list::-webkit-scrollbar {
   width: 0.2em;
-}
-
-.todolist-list::-webkit-scrollbar-thumb {
-  background-color: #46be8b;
-  border-radius: 10px;
 }
 
 .todo-btns {
@@ -63,8 +60,8 @@
 
 @media only screen and (max-width: 600px) {
   .todolist-root {
-    padding: 10% 5%;
     text-align: center;
+    min-width: 100%;
   }
 
   .todayDate-root {
@@ -73,11 +70,14 @@
   }
 
   .todolist-list {
-    max-height: 52%;
+    max-height: 65%;
+    padding:0px;
+
   }
 
   .form {
     width: 100%;
+    padding: 20px 5px;
   }
 
   .form-btnSave {
@@ -86,7 +86,7 @@
 
   .form-root input {
     width: unset;
-    padding: 15px;
+    padding: 16px;
     height: 13px;
   }
 
@@ -105,6 +105,7 @@
   
   .todo-container {
     min-height: 60px;
+    margin: 1px 0px;
   }
 
 }
